Bug 829085 - Fix hit testing when vector-effect=non-scaling-stroke is used. r=dholbert